--- a/ECommerce/Dockerfile
+++ b/ECommerce/Dockerfile
@@ -1,9 +1,11 @@
+# Build Stage
 FROM maven:3.8.4-openjdk-17 AS build
 WORKDIR /app
 COPY . .
 RUN mvn -q -DskipTests package
 
-FROM openjdk:17
+# Run Stage
+FROM eclipse-temurin:17-jdk
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
