--- a/ECommerce/src/main/resources/application-prod.properties
+++ b/ECommerce/src/main/resources/application-prod.properties
@@ -18,8 +18,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${MAIL_USER}
-spring.mail.password=${MAIL_PASS}
+resend.api.key=${RESEND_API_KEY}
+mail.from=${MAIL_FROM}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
