--- a/ECommerce/src/main/resources/application-prod.properties
+++ b/ECommerce/src/main/resources/application-prod.properties
@@ -17,8 +17,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # MAIL SERVICE
 
 
-resend.api.key=${RESEND_API_KEY}
-mail.from=${MAIL_FROM}
+# MAIL SERVICE (Resend)
+spring.mail.host=smtp.resend.com
+spring.mail.port=587
+spring.mail.username=${MAIL_FROM}
+spring.mail.password=${RESEND_API_KEY}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 
 
