--- a/ECommerce/src/main/resources/application-prod.properties
+++ b/ECommerce/src/main/resources/application-prod.properties
@@ -1,36 +1,20 @@
-
 # DATABASE (Render MySQL)
-
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
 # JPA CONFIG
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-
-# MAIL SERVICE
-
-
-# MAIL SERVICE (Resend)
-spring.mail.host=smtp.resend.com
-spring.mail.port=587
-spring.mail.username=${MAIL_FROM}
-spring.mail.password=${RESEND_API_KEY}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-
-
-
+# MAIL SERVICE (Resend ONLY)
+resend.api.key=${RESEND_API_KEY}
+mail.from=${MAIL_FROM}
 
 # PAYMENT KEYS
 stripe.secret.key=${STRIPE_SECRET}
-
 razorpay.key=${RAZORPAY_KEY}
 razorpay.secret=${RAZORPAY_SECRET}
 
