--- a/ECommerce/src/main/resources/application-prod.properties
+++ b/ECommerce/src/main/resources/application-prod.properties
@@ -1,22 +1,45 @@
+# ================================
 # DATABASE (Render MySQL)
+# ================================
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA CONFIG
+# ================================
+# JPA CONFIGURATION
+# ================================
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# MAIL SERVICE (Resend ONLY)
-resend.api.key=${RESEND_API_KEY}
+
+# ================================
+# GMAIL SMTP MAIL SERVICE
+# ================================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 mail.from=${MAIL_FROM}
 
-# PAYMENT KEYS
+
+# ================================
+# PAYMENT GATEWAY KEYS
+# ================================
 stripe.secret.key=${STRIPE_SECRET}
+
 razorpay.key=${RAZORPAY_KEY}
 razorpay.secret=${RAZORPAY_SECRET}
 
-# SERVER
+
+# ================================
+# SERVER CONFIG
+# ================================
 server.port=8080
+
+# FORCE PROD PROFILE
+spring.profiles.active=prod
