--- a/ECommerce/src/main/resources/application-prod.properties
+++ b/ECommerce/src/main/resources/application-prod.properties
@@ -17,14 +17,16 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # ================================
 # GMAIL SMTP MAIL SERVICE
 # ================================
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
 spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 
 mail.from=${MAIL_FROM}
+
 
 
 # ================================
