updated application-prod properties

--- a/ECommerce/src/main/resources/application-prod.properties
+++ b/ECommerce/src/main/resources/application-prod.properties
@@ -13,34 +13,19 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-
 # ================================
-# GMAIL SMTP MAIL SERVICE
+# EMAIL (Brevo API)
 # ================================
-spring.mail.host=${MAIL_HOST}
-spring.mail.port=${MAIL_PORT}
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-
 mail.from=${MAIL_FROM}
-
-
 
 # ================================
 # PAYMENT GATEWAY KEYS
 # ================================
 stripe.secret.key=${STRIPE_SECRET}
-
 razorpay.key=${RAZORPAY_KEY}
 razorpay.secret=${RAZORPAY_SECRET}
-
 
 # ================================
 # SERVER CONFIG
 # ================================
 server.port=8080
-
-
