updated config  files2

--- a/ECommerce/src/main/resources/application-prod.properties
+++ b/ECommerce/src/main/resources/application-prod.properties
@@ -29,3 +29,7 @@ razorpay.secret=${RAZORPAY_SECRET}
 # SERVER CONFIG
 # ================================
 server.port=8080
+
+
+jwt.secret=${JWT_SECRET}
+
