--- a/ECommerce/src/main/resources/application.properties
+++ b/ECommerce/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+jwt.secret=MyJWTSecretKey_AnjaliCart_2025_XYZ_98347!@#$
